--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/fragment_random_picure"
+        android:id="@+id/fragmentRandomPicture"
         android:enabled="true"
         android:icon="@drawable/ic_baseline_photo_library_24"
         android:title="@string/bottom_menu_picture_label" />
     <item
-        android:id="@+id/fragment_favourites"
+        android:id="@+id/fragmentFavourites"
         android:enabled="true"
         android:icon="@drawable/ic_baseline_star_24"
         android:title="@string/bottom_menu_favourites_label" />
