--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,8 @@
 <resources>
     <dimen name="picture_size">300dp</dimen>
     <dimen name="picture_margin">36dp</dimen>
+    <dimen name="like_toggle_button_size">36dp</dimen>
+    <dimen name="like_toggle_button_margin">12dp</dimen>
+    <dimen name="progress_bar_radius">96dp</dimen>
+    <dimen name="progress_bar_corner_radius">36dp</dimen>
 </resources>
